:tada: add my information

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -7,26 +7,26 @@
     class="[&>p]:mb-4 [&>p>strong]:text-yellow-500 dark:[&>p>strong]:text-yellow-100 [&>p>strong]:font-normal [&>p>strong]:font-mono text-pretty order-2 md:order-1"
   >
     <p>
-      Me llamo Miguel Ángel pero mis amigos me llaman midu. Empecé en la
-      programación con un Amstrad, tenía 10 años. Actualmente estoy <strong
-        >liderando equipos de desarrollo en multinacionales</strong
-      >.
+      ¡Hola! Soy Wilson Padilla, <strong>Desarrollador Frontend</strong> con experiencia en 
+      tecnologías web y móviles. Mi especialidad es transformar ideas en <strong>experiencias digitales</strong> 
+      atractivas, utilizando herramientas como <strong>Vue.js y React.js</strong>. También he desarrollado 
+      aplicaciones móviles con A<strong>ndroid (Java), Flutter y React Native</strong>, brindando 
+      <strong>soluciones eficientes</strong> y adaptadas a diferentes necesidades.
     </p>
 
     <p>
-      Algunos de mis éxitos incluyen <strong
-        >colaborar con Mozilla para el desarrollo de las primeras apps en su
-        sistema FirefoxOS</strong
-      >. Aunque hoy está desaparecido fue un gran avance en el mundo del
-      desarrollo web.
+      A lo largo de mi carrera, he enfrentado y 
+      resuelto desafíos complejos utilizando lenguajes como <strong>Python, Javascript y Dart</strong>. 
+      Mi compromiso con el aprendizaje continuo me asegura estar siempre al día con las 
+      tecnologías más avanzadas, garantizando que mis proyectos no solo sean actuales, 
+      sino también <strong>innovadores</strong>.
     </p>
 
     <p>
-      Como creador de contenido, <strong
-        >cuento con el canal de habla hispana más visto del mundo en la
-        categoría de <em class="italic">Software & Game Development</em> en Twitch</strong
-      >. Mi objetivo es mejorar la empleabilidad de la comunidad hispana y el
-      acceso a contenido de calidad.
+      Estoy enfocado en colaborar en proyectos que aporten un <strong>impacto real</strong>, 
+      superando las expectativas con aplicaciones que destacan tanto en 
+      <strong>funcionalidad</strong> como en <strong>diseño</strong>. Estoy entusiasmado por las oportunidades 
+      que nos depara el futuro en este campo tan dinámico.
     </p>
   </div>
 
