--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -3,18 +3,23 @@ import ExperienceItem from "./ExperienceItem.astro"
 const EXPERIENCE = [
   {
     date: "Actualmente...",
-    title: "Creador de Contenido",
-    company: "Twitch",
-    description:
-      "Divulgo sobre programación y desarrollo web en diferentes plataformas. Galardonado como mejor creador de contenido de habla no-inglesa en 2022 y mejor comunidad en 2023 por GitHub.",
-    link: "https://twitch.tv/midudev",
+    title: "FrontEnd Developer",
+    company: "Guane enterprise",
+    description: `Especializado en Vue.js y React.js, desarrollo y mantengo interfaces de usuario, 
+    colaborando en mejoras UX y aplicando buenas prácticas de diseño. 
+    He integrado APIs y creado un panel en tiempo real con WebSocket. Actualmente, 
+    lidero el frontend de una app financiera en Flutter, 
+    mejorando continuamente su rendimiento y gestionando pruebas internas con Firebase.`,
   },
   {
-    date: "Septiembre 2022",
-    title: "Principal Frontend Engineer",
-    company: "Adevinta Spain",
-    description:
-      "Responsable de la plataforma, componentes y utilidades para la creación y desarrollo de aplicaciones web. Mejora de un 30% en la entrega de software. Implantación de medidas de integración continua y despliegue con A/B testing en más de 15 equipos.",
+    date: "Abril 2021 - Octubre 2021",
+    title: "Software Developer",
+    company: "Naowee S.A.S",
+    description: `Trabajé en el desarrollo y soporte de una plataforma de citas médicas utilizando Laravel, 
+    donde creé endpoints, gestioné bases de datos y desarrollé interfaces de usuario. 
+    En otro proyecto, diseñé y desarrollé una plataforma de viajes tipo Uber para España, 
+    encargándome de la arquitectura completa, incluyendo frontend (Vue.js), backend (Laravel), 
+    base de datos (MySQL), y chat interactivo (Firestore).`,
   },
 ]
 ---
